Closed
Bug 1669175
Opened 5 years ago
Closed 5 years ago
Crash in [@ std::_Func_impl_no_alloc<T>::_Do_call | mozilla::dom::BrowsingContext::PreOrderWalk]
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
RESOLVED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | + | fixed |
People
(Reporter: jcristau, Assigned: kmag)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/54135559-518b-4b1c-b941-48fdb0201004
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll std::_Func_impl_no_alloc<`lambda at /builds/worker/checkouts/gecko/dom/ipc/ContentChild.cpp:4236:29', void, mozilla::dom::BrowsingContext*>::_Do_call
1 xul.dll mozilla::dom::BrowsingContext::PreOrderWalk docshell/base/BrowsingContext.cpp:849
2 xul.dll mozilla::dom::BrowsingContext::PreOrderWalk docshell/base/BrowsingContext.cpp:855
3 xul.dll static mozilla::dom::ContentChild::DispatchBeforeUnloadToSubtree dom/ipc/ContentChild.cpp:4236
4 xul.dll mozilla::dom::ContentChild::RecvDispatchBeforeUnloadToSubtree dom/ipc/ContentChild.cpp:4226
5 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:13687
6 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2074
7 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1953
8 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:514
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
Seeing more crashes at null even after the fix for bug 1667491
| Reporter | ||
Updated•5 years ago
|
Flags: needinfo?(kmaglione+bmo)
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → kmaglione+bmo
Status: NEW → ASSIGNED
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(kmaglione+bmo)
Pushed by maglione.k@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/83ba33f74ad8
Fix another null deref in beforeunload code. r=nika
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•