Bug 1669175: Fix another null deref in beforeunload code. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D92468